--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Add lead time and transit location for internal shipments between warehouses
+
 Version 4.0.5 - 2016-12-17
 * Bug fixes (see mercurial logs for details)
 
